Resolved Rule Violations (Sonar)